# hacklytics25

./: .gitignore  README.md
backend/: .env  .env.example  Dockerfile  pyproject.toml  requirements.txt
backend/src/: main.py  mediator.py  prompts.py  settings.py
backend/src/commands/: complete_challenge.py  create_challenge.py  create_challenge_download.py  create_chat_completion.py  create_message.py
backend/src/controllers/: challenges_controller.py
backend/src/database/: mongo.py
backend/src/models/: entities.py  enums.py  web_models.py
backend/src/queries/: get_challenge.py  list_messages.py
frontend/: biome.json  bun.lockb  package.json  vite.config.ts
frontend/app/: entry.server.tsx  root.tsx  tailwind.css
frontend/app/components/ui/: badge.tsx  button.tsx  dialog.tsx  dropdown-menu.tsx  form.tsx  input.tsx  label.tsx  select.tsx  sonner.tsx  textarea.tsx
frontend/app/domains/challenges/: challenge-service.ts  types.ts
frontend/app/domains/challenges/components/: chat-text-input.tsx  complete-challenge-dialog.tsx  view-instructions-dialog.tsx
frontend/app/domains/challenges/pages/: challenge-chat-page.tsx  challenge-create-page.tsx  create-challenge-page.tsx  form-prompt-page.tsx
frontend/app/domains/pages/: create-challenge-page.tsx
frontend/app/hooks/: use-chat-messages.ts  use-local-storage.ts
frontend/app/lib/: axios.ts
frontend/app/routes/: _index.tsx  challenge.$id.tsx
