[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.8",
    "langchain[openai]>=0.3.19",
    "odmantic>=1.0.2",
    "pydantic>=2.10.6",
    "pydantic-settings>=2.8.0",
    "uvicorn>=0.34.0",
]
